Add print functionality to books service class.